# Unnamed-Pixel-RPG

./: CMakeLists.txt  ROADMAP.md
include/core/: Game.hpp  Input.hpp  TextureManager.hpp
include/math/: Vector2.hpp
source/: main.cpp
source/core/: Game.cpp  Input.cpp  TextureManager.cpp
